--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,7 @@
   ],
   "license": "MIT",
   "moduleType": [],
-  "homepage": "https://github.com/superman7117/dating-app",
+  "homepage": "",
   "ignore": [
     "**/.*",
     "node_modules",
